src/objects/OwnerShip_Transfer_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>OwnerShip Transfer Details</relationshipLabel>
        <relationshipName>OwnerShip_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OwnerShip Transfer Details</relationshipLabel>
        <relationshipName>OwnerShip_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ownership Transfer</label>
        <referenceTo>Transfer_Header__c</referenceTo>
        <relationshipLabel>OwnerShip Transfer Details</relationshipLabel>
        <relationshipName>OwnerShip_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanCode__c</fullName>
        <label>Plan Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>OwnerShip Transfer Details</relationshipLabel>
        <relationshipName>OwnerShip_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Pay Plan Header</label>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>OwnerShip Transfer Details</relationshipLabel>
        <relationshipName>OwnerShip_Transfer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OwnerShip Transfer Detail</label>
    <nameField>
        <displayFormat>OTD-{0000}</displayFormat>
        <label>OwnerShip Transfer Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OwnerShip Transfer Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>